# ChangeLog for dev-perl/JSON-XS
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/JSON-XS/ChangeLog,v 1.44 2014/11/11 20:50:15 maekke Exp $

  11 Nov 2014; Markus Meier <maekke@gentoo.org> JSON-XS-3.10.0.ebuild:
  add ~arm, bug #523298

*JSON-XS-3.10.0 (25 Oct 2014)

  25 Oct 2014; Andreas K. Huettel <dilfridge@gentoo.org>
  +JSON-XS-3.10.0.ebuild:
  Version bump, bug 523298

  19 Oct 2014; Mikle Kolyada <zlogene@gentoo.org> -JSON-XS-2.330.0.ebuild:
  Drop old.

*JSON-XS-2.340.0-r1 (23 Aug 2014)

  23 Aug 2014; Ian Stakenvicius (_AxS_) <axs@gentoo.org>
  +JSON-XS-2.340.0-r1.ebuild, -JSON-XS-2.340.0.ebuild:
  bumped EAPI to 5; committed directly to stable as no other changes present and
  revbump helps stable systems to keep from dieing on perl-5.18 upgrade

  21 Oct 2013; Agostino Sarubbo <ago@gentoo.org> JSON-XS-2.340.0.ebuild:
  Stable for x86, wrt bug #488624

  21 Oct 2013; Agostino Sarubbo <ago@gentoo.org> JSON-XS-2.340.0.ebuild:
  Stable for amd64, wrt bug #488624

*JSON-XS-2.340.0 (15 Aug 2013)

  15 Aug 2013; Patrick Lauer <patrick@gentoo.org> +JSON-XS-2.340.0.ebuild,
  JSON-XS-2.330.0.ebuild:
  Bump

  13 Jan 2013; Markus Meier <maekke@gentoo.org> JSON-XS-2.330.0.ebuild:
  add ~arm, bug #449762

  28 Sep 2012; Mike Frysinger <vapier@gentoo.org> JSON-XS-2.330.0.ebuild:
  Add ppc/ppc64 love.

  02 Sep 2012; Torsten Veller <tove@gentoo.org> -JSON-XS-2.320.0.ebuild:
  Cleanup

*JSON-XS-2.330.0 (06 Aug 2012)

  06 Aug 2012; Torsten Veller <tove@gentoo.org> +JSON-XS-2.330.0.ebuild:
  Version bump

  24 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Update CPAN upstream info

  24 Sep 2011; Fabian Groffen <grobian@gentoo.org> JSON-XS-2.320.0.ebuild:
  Marked ~x64-macos

  04 Sep 2011; Torsten Veller <tove@gentoo.org> -JSON-XS-2.3.ebuild,
  -JSON-XS-2.310.0.ebuild:
  Cleanup

*JSON-XS-2.320.0 (16 Aug 2011)

  16 Aug 2011; Torsten Veller <tove@gentoo.org> +JSON-XS-2.320.0.ebuild: