@@ -4,13 +4,15 @@ Hash: SHA256
 DIST JSON-XS-2.34.tar.gz 75468 SHA256 a62fdf2777b9ae206aef382dbb62c9a126ce2ceef0229edacee3f6a9c78900ea SHA512 0deed8cfa6c55b551a1327cf3a9c7460b00e9737116b801a79167862dc0b0aba5ceb99aaf3013b879fa3ffb67206587308f843b8b868f282ffa8a5fccca3c825 WHIRLPOOL 6f1ac43cace605b454b56bb0f0fddfd46ff7b02bb0e2498080cbacd072b6089ba0bb49c893ce94775f9b6d9dc18c30c26eb8408a521a4958405ce0ceff2a6803
 DIST JSON-XS-3.01.tar.gz 78245 SHA256 4e8df3256a5aa9ed304ce1bbcd9140737deef31ba847bff9f4c15480c88c71ab SHA512 75acc0d1b8a916ff1ef08466357e77159f1c53a0e021f93a066f745bf3a67dbf18342fb7f1d8666f2ff2c54a0257ea8a9ce6efc8ce2eeefa81689d406f667733 WHIRLPOOL 0f16dfcc5b852bf07f71f15df24c597ffa2f6fea905cf159845abb8d1124c9c36005cf5743f89a5ab46c28f9688d367a8b08a6b4fc28964eec5b87d5190f0e44
 EBUILD JSON-XS-2.340.0-r1.ebuild 564 SHA256 8ef7a2142df3d8a19eaadf73fd0560e86174305c3cf156a4979322a4a1edd577 SHA512 00b6e90039eb6986ac630bfd55ab1bb1e521bad53d762b36396058343670c91694399f53a4704fadb4b4f6c9726f4b5db1a9be3cbb37a072c707c5734c1c46ec WHIRLPOOL 341cc2d69019b77eb91988db787c9d156bbe98867fb9853171afe494ec201ad4c0aeaa3cd21ef4f44d2b6fa69f9ac4cde5d8f7013db3481f947b7f3ea919ba10
-EBUILD JSON-XS-3.10.0.ebuild 592 SHA256 7cebb8ad0475dc4127e4506250ed63cb119e4f5738ef43ae3e694fbda513dec6 SHA512 25bd12f4b3f4faf672a3df7e899ed8e43649baea8d202c644177a35a5cae2f548bffa9fe0fdcb258a8479af4a7656af724ccab086dac776f58f4b7bf0d404a44 WHIRLPOOL 42fa490e9fccf64f1659b725363dc9b3635dc3d6ef1f3af76a899ec14a63ea4edc8224e0f63646bc6dcd8dcec6aadfdd6a070a9134cdf7a6577e4cb2988714a6
-MISC ChangeLog 5590 SHA256 eb3b13d1a90c68e1f2844952ede50eeb610185e005d6924c562738b35b862867 SHA512 881d8d7f1fd8929efa28f5c080000286dfffb3eb6674c676a545ff8eaa51f90a44a6db491b6784ea567cb45a066f4972321a36718478192d2f2ee6194ee8feef WHIRLPOOL cd6ea91a919b1c9bf1423d519d70d2ee86b6ad13a639339f28e84e18e2f2dccb39450c8bcc213deb4df00d6c5fdd022c2dbc246d9c567942f5db53950fe87a9f
+EBUILD JSON-XS-3.10.0.ebuild 629 SHA256 b42d36bd320724a7b924dc39af0cad7284712e8ab939b9792f7b39a39f641c62 SHA512 a6e3892394de038e2790f83317254cfdb9880c94b8a59036cafcb874a5d3b0ba733686ac490afee87eae22c78ac760bc5c77f0e4af9c51f045ded94f112a0327 WHIRLPOOL 2af7adb184194ba42047754d21adda4a1da79046a1d1e923e9744270ea22fde6cade2c7eac7d56cf59962c8467e0d76068e690a5539f1a421054e328f7d9824b
+MISC ChangeLog 5701 SHA256 08fb6b8bebe5e7e9c3133abb3c4f91addc22bf98e06d64907a52eb7e84d8b35e SHA512 f758808ecf9819ce01e14f48fd4b0a19b41858e461c1018bd70bf7b0c352929ba562b4ba824692da32309ae7d654ebefb14b0a7f9a8b4ab24026539b26945f90 WHIRLPOOL c91bb176089d2b3f0c1afe0e2736ab50ddf1747dff290d876d73eeff604b636895a639f40609f75fa05c0afc5deccdd8b52bafb710d4b0988fd702f9dc4b9bdf
 MISC metadata.xml 352 SHA256 04466aef04b97a1bc6f506a1fccd4a953b6dd25694e5d05b78afe9489380f909 SHA512 88f750302ca47db14bd4f507077acd5954c8a9cd00a34e87da4fa83bef13ba6fced35f1ad8a6f7e2f36960d1245195d9f79ba91d3fba7841e69745f78ea3943e WHIRLPOOL 35ee4dea7937a9260819da18e7a486c7f407acb68577b1b94aecdd66ed49c9c0f2415e43467cc3bd291040f1168a77e151787e3b97c5375d2d2c8a9042316b30
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlRidokACgkQkKaRLQcq0GI7wgCbBIINHraIyUXSvG+Y2xpG0AwH
-X7AAoKX2vBbFhrvWS2pa+SKgMoZny12H
-=1qR+
+iJwEAQEIAAYFAlSkQSoACgkQG9wOWsQutdZm8wP/Xo6akhnIb+yCnT+WwnwgqwV/
+H4g9Jy+CbcmQG9COlYXr9HbAvu8dPNOw9Y274Cm6IQYwrwKYXBZbuThePYzuIYnN
+MWFQ0HjDOM5hE0G/hyQpxp85gTjQyq6D5crmwNagZYeCETHpo9MEeGeA4ebtjCq1
+V/UTGeEnAI+atg8IF60=
+=GIlB
 -----END PGP SIGNATURE-----
