@@ -2,13 +2,15 @@
 Hash: SHA256
 
 DIST Types-Serialiser-1.0.tar.gz 6238 SHA256 7ad3347849d8a3da6470135018d6af5fd8e58b4057cd568c3813695f2a04730d SHA512 b786bcd3ee976a6ad948cc98a9c71d2cdcd30f485528eff059091f6d86ae7078c10ba2dc2982326fcf0184dbfbdddea84daff324c6ec6a129fe6aac01253c8fb WHIRLPOOL 2dae7b4ec26b9adadf2dd0ab1fabd05603ea96bbdcbc7ebb8ea77d3ba6eb6ef0a2a011c9b857cba28e8d3da20e997fe2ae59abf003d3a89b0edd51fe294c81a3
-EBUILD Types-Serialiser-1.0.0.ebuild 510 SHA256 37844f1994b396ee78ea359605d2e1d9a2365a16996fdcb885361ea1566b416f SHA512 0d363ee51cc6e306e7ccae4fe9bae58927158e073bfb75bccefa5898a599c46541a36cbe1c9c518d08ece1cf9d5e6330e6169ae0e7b23d3d4c94c6101b159af4 WHIRLPOOL f636dd6f4fb6a2633c3b4fa5b1a0a1e0156c5f299797bc086b5be3e20baed5169be2f994ada644de75b0ee192b74a9b30d1537a3edb58b34156abdeb6df94167
-MISC ChangeLog 487 SHA256 5d351164b412e325f849ef0530d78918f2f11924a59827ff02608f3a131179c5 SHA512 b397246daa4277ae8e2d1c231d433043090123a9eb838ed851bb4b6eb5354ed3fe75470760d6ab36d0fcc485ae4973be5e067e157c55870a11bb87e92cea1264 WHIRLPOOL 27709066ba6c8b40e7eaa01d7b0132abd3d17fe8f40ecf838704e37e8e0202d06af154effa534849c3d188a7371d9d5ede541c37fa3ff86c40fd5a8f1484bb01
+EBUILD Types-Serialiser-1.0.0.ebuild 547 SHA256 89c95fca967965cec5629014ca9dfde3270b09c0e29aac666a6085cb230607c2 SHA512 271e405176ea1f4fd3fbc022299f9dbd5fb7959090bc05e32106bc5d0ae4d6045128f26e8eebcfa0d3d4a23925beeff41caa3467ab4ace6c617c3358a7ae1724 WHIRLPOOL ef6e180a43b01229b99047ba92d7a739a9b2e089a022e957361121cea3cb00a104be2f4985f4934ed861eeab97ac4f112e23c5ed730ff64dbd8b0f9a012d3a3c
+MISC ChangeLog 605 SHA256 44d850eeaf68c0a7d2d47994b3a675b8103a3d96509fdf4ab202bad272adf09e SHA512 96c1a545e6c92d9c2d61060d843b88a3876197c7934f0b0e31db17ea763d7c180e03601717070b6fe4ee8214326e29e20b7477dcc84c1e099a0dc0274aad9c18 WHIRLPOOL da04f3c489153aa66265ec765d06707100265822d62c458390312be43fe3a3a8032ef2f2178323d20b727e0b9d38a63242a0e1d976874bc9deafeef6841e1a4f
 MISC metadata.xml 159 SHA256 9e7c719a784bb48388c9a12217b85baa75f1b04e9bf049d74b740785fa5006dd SHA512 5ff7b5593ea8976b44c7d63c7cd649f56d649b0d7c4fa5a16bf71ecdf36e40afa8fd9c28df0b8f0c7f9577c47b6ee63d3330f9304d545b46657d6a5f2bfa124a WHIRLPOOL 7ca7b971bad6145bdf2215f73d158f190984644554e8f32132c57c22f1209a5684060661c02e181c135c34c8729d491090ff6d4b23614198e19b9e2deda35a0a
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlRidlsACgkQkKaRLQcq0GIR0gCgpl2imkAO5ks6lMSZmsKUASQ3
-6dQAn10ad8N7s4aM/oHz1LW8K8AqBVng
-=JZ6u
+iJwEAQEIAAYFAlSkQVMACgkQG9wOWsQutdZ6zQQA2b/Id2viE14LyDRU9Gk71/Kr
+5mi1K9XZrpVplRPRn2pzQVnamLMRMK0KNjyltT5mRlWhZ5lh3iIOgNmcVwigh5Yh
+jpRo0Q4WYaXuUPCSBo+hrVxAzRnsJhdxL5U4kuAWDVsRQFaAKsWpQSvEOPJoLqUY
+o2v2r8YLkuS8p1iBFPw=
+=/+II
 -----END PGP SIGNATURE-----
