@@ -4,10 +4,10 @@ DESCRIPTION=JSON::XS - JSON serialising/deserialising, done correctly and fast
 EAPI=5
 HOMEPAGE=http://search.cpan.org/dist/JSON-XS/
 IUSE=test
-KEYWORDS=~amd64 ~arm ~x86
+KEYWORDS=~amd64 ~arm ~ppc ~ppc64 ~x86 ~x64-macos ~x86-solaris
 LICENSE=|| ( Artistic GPL-1+ )
 RDEPEND=dev-perl/Types-Serialiser dev-perl/common-sense dev-lang/perl:=[-build(-)]
 SLOT=0
 SRC_URI=mirror://cpan/authors/id/M/ML/MLEHMANN/JSON-XS-3.01.tar.gz
 _eclasses_=eutils	f99a767f569b1f0731b3a1edd17c1d11	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	perl-module	4e599aab78ebadca09ce51369fa9019d	toolchain-funcs	0dfbfa13f57c6184f4728d12ac002aac	unpacker	f300a7ca9131b1024a79762e8edd3c52
-_md5_=ba7ced713737ac7e6237f6420069e1eb
+_md5_=87e426589c5a95dda4cc00cc9478f263
