@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Types-Serialiser
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Types-Serialiser/ChangeLog,v 1.2 2014/11/11 20:49:29 maekke Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Types-Serialiser/ChangeLog,v 1.3 2014/12/31 18:34:24 zlogene Exp $
+
+  31 Dec 2014; Mikle Kolyada <zlogene@gentoo.org> Types-Serialiser-1.0.0.ebuild:
+  Add more keywords wrt bug #523298
 
   11 Nov 2014; Markus Meier <maekke@gentoo.org> Types-Serialiser-1.0.0.ebuild:
   add ~arm, bug #523298
@@ -10,4 +13,3 @@
   25 Oct 2014; Andreas K. Huettel <dilfridge@gentoo.org>
   +Types-Serialiser-1.0.0.ebuild, +metadata.xml:
   New package
-
